--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.1",
+    "@igniteui/material-icons-extended": "^3.0.0",
     "express": "^4.18.2",
+    "fflate": "^0.8.1",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^17.1.2",
+    "minireset.css": "~0.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -30,7 +35,9 @@
     "@angular-devkit/build-angular": "^17.2.1",
     "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.0",
+    "@igniteui/angular-schematics": "~17.1.1316",
     "@types/express": "^4.17.17",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
